# chamachainapp

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
anchor/: Anchor.toml  package.json
anchor/programs/chamachain/: Cargo.toml
anchor/programs/chamachain/src/: constants.rs  error.rs  lib.rs  state.rs
anchor/programs/chamachain/src/instructions/: lending.rs  mod.rs  protocol.rs  savings.rs  treasury.rs
anchor/programs/chamachain/tests/: money_paths.rs
anchor/scripts/: bootstrap.ts  smoke.ts
src/: App.tsx  index.css  main.tsx
src/components/: FiatPaymentModal.tsx  Footer.tsx  Layout.tsx  MpesaModal.tsx  Navbar.tsx  SignInGate.tsx  SkeletonCard.tsx  StatusBadge.tsx  WalletAuthButton.tsx
src/hooks/: useChamaData.ts  useWalletBalance.ts
src/lib/: auth.tsx  chama-store.tsx  format.ts  mock-data.ts  payments.ts  solana.ts  theme.tsx
src/lib/onramp/: kotani.ts  router.ts  simulated.ts  types.ts
src/lib/program/: accounts.ts  client.ts  cluster.ts  faucet.ts  instructions.ts  pdas.ts  units.ts
src/lib/program/clusters/: devnet.ts  mainnet.ts  types.ts
src/lib/program/idl/: chamachain.json  chamachain.ts
src/pages/: ChamaDetail.tsx  CreateChama.tsx  Dashboard.tsx  Index.tsx  NotFound.tsx  Profile.tsx
