[package]
name = "chamachain"
version = "0.1.0"
description = "ChamaChain v2 — decentralized cooperative finance (savings, CHM share token, treasury, lending) on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chamachain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
anchor-lang = "0.32.1"
litesvm = "0.7"
solana-sdk = "2"
# `no-entrypoint` drops these programs' Solana entrypoint symbol so they don't
# collide with each other (or with chamachain's) when linked into host tests.
spl-token = { version = "7", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
